<resources>
    <string name="app_name">demo-android</string>
    <string name="app_header">DEMO<b>STORE</b></string>
    <string name="add_to_cart">Add to cart</string>
    <string name="stories">Stories</string>
    <string name="new_features_title">Want\'s to see in-app notifications?</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="empty_shopping_cart">Your shopping cart is empty</string>
    <string name="shipping">Shipping:</string>
    <string name="total">Total:</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="suitable_categories">SUITABLE CATEGORIES</string>
    <string name="suitable_products">SUITABLE PRODUCTS</string>
    <string name="suitable_products_not_found">Products not found</string>
    <string name="show_all"><![CDATA[Show all >]]></string>
    <string name="store_settings">Store settings</string>
    <string name="settings_title">Try your own products</string>
    <string name="settings_description">If you want to try a demo store with your products, you can put here your store key. To get the key, sign up on personaclick.ru.</string>
    <string name="settings_upload_description">This process may take some time.</string>
    <string name="you_story_key">You story key</string>
    <string name="upload">Upload</string>
    <string name="shop">Shop</string>
    <string name="reviews"><u>46 reviews</u></string>
    <string name="checkout">Checkout</string>
    <string name="arrivals_title">New arrivals</string>
    <string name="trends_title">Top trends</string>
    <string name="recommender_title">Recommender title</string>
    <string name="alert_dialog_button_accept_title">Accept</string>
    <string name="alert_dialog_button_decline_title">Cancel</string>
    <string name="alert_dialog_title">Pizza ipsum dolor meat lovers buffalo.</string>
    <string name="alert_dialog_message">Pizza ipsum dolor meat lovers buffalo. Cheese ranch Philly red marinara ricotta lovers steak NY beef.</string>
    <string name="alert_dialog_full_screen_message">Pizza ipsum dolor meat lovers buffalo. Garlic sauce party sautéed ipsum cheese. Meatball mayo extra peppers Chicago spinach olives. Philly black crust pineapple steak ranch large large. Chicken hand pie tossed pan mushrooms large Bianca deep. Mozzarella roll string party mouth style lovers Hawaiian pan. Ricotta mayo red pizza fresh style string string. Broccoli meatball wing cheese sautéed. Peppers ipsum Aussie cheese olives Philly Hawaiian Aussie cheese personal. Pork dolor sausage bell mozzarella pepperoni thin deep mushrooms.</string>

</resources>
